# napari-simple-crop

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
napari_simple_crop/: _dock_widget.py
napari_simple_crop/_tests/: test_dock_widget.py
