[metadata]
name = napari-simple-crop

author = Jordao Bragantini
author_email = jordao.bragantini@czbiohub.org
license = BSD-3-Clause
url = https://github.com/JoOkuma/napari-simple-crop
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/JoOkuma/napari-simple-crop/issues
    Documentation = https://github.com/JoOkuma/napari-simple-crop#README.md
    Source Code = https://github.com/JoOkuma/napari-simple-crop
    User Support = https://github.com/JoOkuma/napari-simple-crop/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-simple-crop = napari_simple_crop
